[package]
name = "exolvl"
version = "0.6.1"
edition = "2021"
authors = ["skycloudd"]
description = "A library for reading and writing Exoracer level files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skycloudd/exolvl"
keywords = ["exoracer", "exolvl", "gamedev"]
categories = ["parser-implementations"]
readme = "README.md"
exclude = [".github/*"]

[dependencies]
chrono = "0.4"
cs-datetime-parse = "1.1.0"
flate2 = "1.0.33"
image = { version = "0.25.2", optional = true }
leb128 = "0.2"
ordered-float = { version = "4.2.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
strum = { version = "0.26", features = ["derive"] }
titlecase = "3.3.0"
time = "0.3.36"
glam = "0.29.0"
serde_json = "1.0.128"
rand = "0.8.5"
hex = "0.4.3"
openssl = "0.10.66"
tracing-forest = { version = "0.1.6", features = ["full"] }
base64 = "0.22.1"

[features]
serde = ["dep:serde", "chrono/serde", "glam/serde", "uuid/serde"]
image = ["dep:image"]